inciando projeto prevento cotacao bitcoin

--- a/00.Teoria_-_Apache_Spark.ipynb
+++ b/00.Teoria_-_Apache_Spark.ipynb
@@ -238,7 +238,63 @@
     "- **Processamento e Análise**:\n",
     "  - Usar **PySpark** para carregar dados de uma fonte de armazenamento.\n",
     "  - Transformar os dados e executar consultas SQL com **SparkSQL**.\n",
-    "  - Aplicar algoritmos de machine learning usando **MLlib**."
+    "  - Aplicar algoritmos de machine learning usando **MLlib**.\n",
+    "  \n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "# Quando PodemosUsar o Apache Spark?\n",
+    "\n",
+    "\n",
+    "O Apache Spark podeser usado sempre que os requerimentos abaixo fizerem parte de um projeto de Ciência de Dados:\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "  - Integração de dados e ETL\n",
+    "  - Análises interativase manipulação de grandes massas de dados\n",
+    "  - Computação em batch de alta performance\n",
+    "  - Análises avançadas e Machine Learning•\n",
+    "  - Processamento de dados em tempo real\n",
+    "  \n",
+    "<br><br>\n",
+    "\n",
+    "# Conectando ao Cluster Spark\n",
+    "\n",
+    "Para trabalhar com o Apache Spark, primeiro devemos conectar no cluster Spark (seja um pseudo-cluster de uma única máquina, seja em um cluster de milhares de máquinas). A conexão é feita criando um SparkContext.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "## SparkContext\n",
+    "\n",
+    "Um SparkContext representa a conexão com um cluster Spark e pode ser usado para criar RDDs (Datasets Distribuídos), acumuladores e variáveis de broadcast nesse cluster. Apenas um SparkContext deve estar ativo por JVM. Você deve parar o SparkContext ativo antes de criar um novo.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### SparkSession\n",
+    "\n",
+    "Com o contexto criado, podemos então criar uma sessão Spark. SparkSession é o ponto de entrada para o SparkSQL. Você cria uma SparkSession usando o método `Builder()`, que dá acesso à API do Builder que você usa para configurar a sessão.\n",
+    "\n",
+    "#### Funcionalidades do SparkSession\n",
+    "\n",
+    "Uma vez criada a sessão, SparkSession permite:\n",
+    "- Criar um DataFrame\n",
+    "- Criar um Dataset\n",
+    "- Acessar serviços SparkSQL (por exemplo, ExperimentalMethods, ExecutionListenerManager, UDFRegistration)\n",
+    "- Executar uma consulta SQL\n",
+    "- Carregar uma tabela\n",
+    "- Acessar a interface DataFrameReader para carregar um conjunto de dados do formato de sua escolha\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "## Múltiplas SparkSessions\n",
+    "\n",
+    "Você pode ter quantas SparkSessions quiser em um único aplicativo Spark. O caso de uso comum é manter as entidades relacionais separadas logicamente em catálogos por SparkSession.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "## Encerrando a SparkSession\n",
+    "\n",
+    "No final, você interrompe uma SparkSession usando o método `stop()`.\n"
    ]
   },
   {
