avancando com novas etapas como analises, limpezas e transformacoes

--- a/Mini-Projeto3.ipynb
+++ b/Mini-Projeto3.ipynb
@@ -905,7 +905,7 @@
    "outputs": [],
    "source": [
     "# Vamos ajustar o formato da data para extrair o dia da semana\n",
-    "df_data_hora = df_data_hora.withColumn(\"date\", df_data_hora[\"date\"].cast(DateType())).withColumn(\"hour\", df_data_hora[\"hour\"].cast(DoubleType())).withColumn(\"dateTime\", df_data_hora[\"dateTime\"].cast(DateType()))\n"
+    "df_data_hora = df_data_hora.withColumn(\"date\", df_data_hora[\"date\"].cast(DateType())).withColumn(\"hour\", df_data_hora[\"hour\"].cast(DoubleType())).withColumn(\"dateTime\", df_data_hora[\"dateTime\"].cast(DateType()))"
    ]
   },
   {
