adicionando novo projeto com multiclassificacao

--- a/Pipeline_Modelos_de_Machine_Learning.ipynb
+++ b/Pipeline_Modelos_de_Machine_Learning.ipynb
@@ -1368,17 +1368,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a83696d",
+   "metadata": {},
+   "source": [
+    "<br><br>\n",
+    "\n",
+    "# Carregando Modelo e Pipeline Salvos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b05066b",
+   "id": "4fd59ab3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "c82bd615",
+   "metadata": {},
+   "source": [
+    "<br><br>\n",
+    "\n",
+    "# Previsões com Novos Dados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58bbed89",
+   "id": "3a03a521",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2485,12 +2505,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17fee48d",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Este pipeline completo demonstra como incluir a padronização após a codificação das variáveis categóricas e a combinação das características em um vetor. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3432bdb1",
+   "id": "dd3a3091",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml.feature import StringIndexer, OneHotEncoder, VectorAssembler, StandardScaler\n",
+    "from pyspark.ml import Pipeline\n",
+    "\n",
+    "# Inicializar SparkSession\n",
+    "spark = SparkSession.builder.appName(\"CategoricalEncoding\").getOrCreate()\n",
+    "\n",
+    "# Exemplo de dados\n",
+    "data = [\n",
+    "    (0, \"a\", \"x\", 10.0),\n",
+    "    (1, \"b\", \"y\", 20.0),\n",
+    "    (2, \"c\", \"z\", 30.0),\n",
+    "    (3, \"a\", \"x\", 40.0),\n",
+    "    (4, \"a\", \"y\", 50.0),\n",
+    "    (5, \"c\", \"z\", 60.0)\n",
+    "]\n",
+    "\n",
+    "# Criar DataFrame\n",
+    "columns = [\"id\", \"category1\", \"category2\", \"value\"]\n",
+    "df = spark.createDataFrame(data, columns)\n",
+    "\n",
+    "# Mostrar DataFrame\n",
+    "df.show()\n",
+    "\n",
+    "# StringIndexer para category1 e category2\n",
+    "indexer1 = StringIndexer(inputCol=\"category1\", outputCol=\"category1_index\")\n",
+    "indexer2 = StringIndexer(inputCol=\"category2\", outputCol=\"category2_index\")\n",
+    "\n",
+    "# OneHotEncoder para category1_index e category2_index\n",
+    "encoder1 = OneHotEncoder(inputCol=\"category1_index\", outputCol=\"category1_encoded\")\n",
+    "encoder2 = OneHotEncoder(inputCol=\"category2_index\", outputCol=\"category2_encoded\")\n",
+    "\n",
+    "# VectorAssembler para combinar todas as colunas de recursos em uma única coluna de vetor\n",
+    "assembler = VectorAssembler(\n",
+    "    inputCols=[\"category1_encoded\", \"category2_encoded\", \"value\"],\n",
+    "    outputCol=\"features\"\n",
+    ")\n",
+    "\n",
+    "# StandardScaler para padronizar as características\n",
+    "scaler = StandardScaler(inputCol=\"features\", outputCol=\"scaled_features\")\n",
+    "\n",
+    "# Pipeline\n",
+    "pipeline = Pipeline(stages=[indexer1, indexer2, encoder1, encoder2, assembler, scaler])\n",
+    "\n",
+    "# Ajustar e transformar os dados\n",
+    "pipeline_model = pipeline.fit(df)\n",
+    "df_transformed = pipeline_model.transform(df)\n",
+    "\n",
+    "# Mostrar DataFrame transformado\n",
+    "df_transformed.select(\"id\", \"category1\", \"category2\", \"value\", \"scaled_features\").show()"
+   ]
   }
  ],
  "metadata": {
